--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <form id="form" class="col s12">
       <div class="row">
         <div class="input-field col s6">
-          <input placeholder="Max: 50" name="amount" type="number" class="validate">
+          <input placeholder="Max: 50" name="amount" type="number" class="validate" min="1" max="50">
           <label for="first_name">Cantidad de preguntas:</label>
         </div>
         <div class="input-field col s12">
@@ -27,8 +27,9 @@
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input disabled value="I am not editable" id="disabled" type="text" class="validate">
-          <label for="disabled">Disabled</label>
+          <select name="categories" id="select-categories">
+          </select>
+          <label>Materialize Select</label>
         </div>
       </div>
       <button class="btn waves-effect waves-light" type="submit" name="action">Submit
