--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  
+  <div class="container">
   <div class="row">
     <form id="form" class="col s12">
       <div class="row">
         <div class="input-field col s6">
           <input placeholder="Max: 50" name="amount" type="number" class="validate" min="1" max="50">
-          <label for="first_name">Cantidad de preguntas:</label>
+          <label for="first_name">Number of questions:</label>
         </div>
         <div class="input-field col s12">
           <select name="difficulty">
@@ -22,21 +22,23 @@
             <option value="medium">Medium</option>
             <option value="hard">Hard</option>
           </select>
-          <label>Materialize Select</label>
+          <label>Difficulty</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
           <select name="categories" id="select-categories">
           </select>
-          <label>Materialize Select</label>
+          <label>Category</label>
         </div>
       </div>
-      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+      <button class="btn waves-effect waves-light" type="submit" name="action">Create
         <i class="material-icons right">send</i>
       </button>
     </form>
   </div>
+  </div>
+  <div class="container">
   <div>
     <div>
       <i class="material-icons">attach_money</i>
@@ -59,5 +61,6 @@
       <div class="swiper-scrollbar"></div>
     </div>
     <div id="message-container"></div>
+  </div>  
 </body>
 </html>
