--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav class="nav" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">QG</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo">QG</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#form">Start</a></li>
       </ul>
